Add Q1/Q2 answers and link practice tasks in core-java README